<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/pageName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:layout_marginStart="8dp"
            android:lines="1"
            android:text="@string/menu_settings"
            android:textStyle="bold"
            android:drawableStart="@drawable/arrow_back"
            android:drawablePadding="8dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_padding_horizontal"
        android:paddingTop="12dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_clear_history"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginVertical="3dp"
            android:text="@string/clear_history"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"
            android:paddingStart="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginVertical="3dp"
            android:text="@string/about"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"
            android:paddingStart="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/about_text"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:gravity="center" />
    </LinearLayout>
</RelativeLayout>