<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/pageName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:layout_marginStart="8dp"
            android:lines="1"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:drawablePadding="8dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_padding_horizontal"
        android:paddingTop="12dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginVertical="3dp"
            android:text="@string/menu_search"
            android:textSize="16sp"
            android:drawableStart="@drawable/icon_search"
            android:drawablePadding="12dp"
            android:gravity="start|center_vertical"
            android:paddingStart="16dp"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_history"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginVertical="3dp"
            android:text="@string/menu_history"
            android:textSize="16sp"
            android:drawableStart="@drawable/icon_history"
            android:drawablePadding="12dp"
            android:gravity="start|center_vertical"
            android:paddingStart="16dp"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginVertical="3dp"
            android:text="@string/menu_settings"
            android:textSize="16sp"
            android:drawableStart="@drawable/icon_settings"
            android:drawablePadding="12dp"
            android:gravity="start|center_vertical"
            android:paddingStart="16dp"
            android:textAllCaps="false" />

    </LinearLayout>
</RelativeLayout>