<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/pageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:layout_marginStart="8dp"
            android:lines="1"
            android:text="@string/menu_history"
            android:textStyle="bold"
            android:drawableStart="@drawable/arrow_back"
            android:drawablePadding="8dp" />

        <TextView
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="3dp"
            android:layout_marginEnd="8dp"
            android:text="@string/clear_history"
            android:textColor="@color/pink"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top"
        android:paddingHorizontal="@dimen/activity_padding_horizontal"
        android:clipToPadding="false" />

    <TextView
        android:id="@+id/empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/history_empty"
        android:textColor="@color/gray"
        android:visibility="gone" />
</RelativeLayout>